width first rows

--- a/index.html
+++ b/index.html
@@ -35,28 +35,7 @@
             -moz-text-size-adjust: none;
             -ms-text-size-adjust: none;
         }
-
-        @media (max-width: 768px) {
-            .mobile-font-size {
-                display: none !important;
-                font-size: 5.6px !important;
-                text-size-adjust: none;
-                -webkit-text-size-adjust: none;
-                -moz-text-size-adjust: none;
-                -ms-text-size-adjust: none;
-            }
-        }
-
-        .colortext {
-            font-weight: bold;
-        }
     </style>
-    <!--[if mso]> <style type="text/css"> .kostil { line-height: 0px !important; } </style> <![endif]-->
-    <!--[if gte mso 9]><style>sup { font-size: 100% !important; }</style><![endif]-->
-    <!-- All other clients get the webfont reference; some will render the font and others will silently fail to the fallbacks. More on that here: http://stylecampaign.com/blog/2015/02/webfont-support-in-email/ -->
-    <!--[if !mso]><!-->
-    <!-- insert web font reference, eg: <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
-    <!--<![endif]-->
 </head>
 
 <body>
@@ -69,18 +48,18 @@
                         <tr>
                             <td width="30"></td>
                             <td>
-                                <table border="0" cellpadding="0" cellspacing="0" heigh="10px" style="height: 10px;"></table>
+                                <table border="0" cellpadding="0" cellspacing="0" heigh="20px" style="height: 20px;"></table>
                                 <table border="0" cellpadding="0" cellspacing="0" >
                                     <tr>
-                                        <td width="700"></td>
-                                        <td width="200" style="padding-right: 20px;">
+                                        <td width="500"></td>
+                                        <td width="220" style="padding-right: 20px;">
                                             <span
                                                 style="
                                                 font-family: Arial;
                                                 font-style: normal;
                                                 font-weight: bold;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #FF0078;">
                                                 Номер карты</span>
@@ -89,19 +68,19 @@
                                                 font-style: normal;
                                                 font-weight: bold;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;">
                                                 {{card_number}}</span>
                                         </td>
-                                        <td  width="200" style="padding-right: 20px;">
+                                        <td  width="220">
                                             <span
                                                 style="
                                                 font-family: Arial;
                                                 font-style: normal;
                                                 font-weight: bold;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #FF0078;">
                                                 Баланс
@@ -111,7 +90,7 @@
                                                 font-style: normal;
                                                 font-weight: bold;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;">
                                                 {{available_bonuses_total}}
@@ -119,6 +98,7 @@
                                         </td>
                                     </tr>
                                 </table>
+                                <table border="0" cellpadding="0" cellspacing="0" heigh="10px" style="height: 10px;"></table>
                                 <table border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
@@ -127,7 +107,7 @@
                                                 font-style: normal;
                                                 font-weight: normal;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;
                                                 ">
@@ -142,7 +122,7 @@
                                                 font-style: normal;
                                                 font-weight: normal;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;
                                                 text-decoration: none;">
@@ -158,7 +138,7 @@
                                                 font-style: normal;
                                                 font-weight: normal;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;
                                                 text-decoration: none;">
@@ -174,7 +154,7 @@
                                                 font-style: normal;
                                                 font-weight: normal;
                                                 font-size: 9px;
-                                                line-height: 27px;
+                                                line-height: 14px;
                                                 letter-spacing: 0.02em;
                                                 color: #545050;
                                                 text-decoration: none;">
@@ -183,6 +163,7 @@
                                         </td>
                                     </tr>
                                 </table>
+                                <table border="0" cellpadding="0" cellspacing="0" heigh="10px" style="height: 10px;"></table>
                                 <table border="0" cellpadding="0" cellspacing="0" heigh="10px" style="height: 10px;"></table>
                                 <table border="0" cellpadding="0" cellspacing="0">
                                     <tr>
